--- a/Java/app/src/main/AndroidManifest.xml
+++ b/Java/app/src/main/AndroidManifest.xml
@@ -3,12 +3,14 @@
     package="software.rsquared.template">
 
     <application
+        android:name=".ThisApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,6 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.pager.PagerActivity" />
+
     </application>
 
 </manifest>
