--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.41'
-    ext.support_version = '27.1.1'
+    ext.kotlin_version = '1.2.71'
+    ext.support_version = '28.0.0'
     ext.dagger_version = '2.15'
+
+	ext.versions = [
+			'compileSdk'  : 28,
+			'minSdk'      : 17,
+			'targetSdk'   : 28,
+			'kotlin'      : '1.2.71',
+			'dagger'      : '2.16',
+	]
 
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:3.2.1'
+	    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
