--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,7 +87,7 @@ dependencies {
     /* Kotlin */
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin}"
 
-    /* Support */
+    /* Androidx */
     implementation 'androidx.multidex:multidex:2.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.0.0'
@@ -108,10 +108,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-common-java8:2.0.0'
 
-
-	/* rSquared tools */
-	implementation 'software.rsquared:permission-tools:1.1.1'
-	implementation 'software.rsquared:android-logger:1.3.3'
+    /* rSquared tools */
+    implementation 'software.rsquared:permission-tools:1.1.1'
+    implementation 'software.rsquared:android-logger:1.3.3'
 //	implementation 'software.rsquared:text-decorator:1.0.2'
 //	implementation 'software.rsquared:app-profiler:1.1.5'
 //	kapt 'software.rsquared:app-profiler-processor:1.1.5'
